crates/rlf/tests/fail/value_not_serializable.rs
use rlf::Value;

fn assert_serialize<T: serde::Serialize>() {}

fn main() {
    assert_serialize::<Value>();
}
