crates/rlf/tests/fail/value_not_serializable.stderr
error[E0277]: the trait bound `Value: serde::Serialize` is not satisfied
 --> tests/fail/value_not_serializable.rs:6:24
  |
6 |     assert_serialize::<Value>();
  |                        ^^^^^ the trait `Serialize` is not implemented for `Value`
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Value` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `assert_serialize`
 --> tests/fail/value_not_serializable.rs:3:24
  |
3 | fn assert_serialize<T: serde::Serialize>() {}
  |                        ^^^^^^^^^^^^^^^^ required by this bound in `assert_serialize`
